--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
           <h3>Geographic location</h3>
           <!--The div element for the map -->
           <div id="map"></div>
-          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBejMXp63dhTDOZGR2c53lDM1CMW5jT7R4&libraries=visualization"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=""&libraries=visualization"></script>
           
       <!-- </div> -->
       <!-- <div id="pie"></div>
