--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,16 @@
         margin-top: 20px;
         margin-bottom: 50px
       }
+      .yaxis line{
+        stroke:rgb(77, 69, 69);
+      }
+      .yaxis path{
+        stroke:rgb(77, 69, 69);
+      }
+      .yaxis text{
+        stroke:rgb(77, 69, 69);
+        font-weight: 100
+      }
 
    </style>
    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
