--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,16 @@
         margin-top: 20px;
         margin-bottom: 50px
       }
+      .xaxis line{
+        stroke:rgb(77, 69, 69);
+      }
+      .xaxis path{
+        stroke:rgb(77, 69, 69);
+      }
+      .x-text{
+        fill:rgb(172, 165, 165);
+        /* stroke-width: 0.5px;     */
+       }
       .yaxis line{
         stroke:rgb(77, 69, 69);
       }
@@ -48,9 +58,42 @@
         stroke:rgb(77, 69, 69);
       }
       .yaxis text{
-        stroke:rgb(77, 69, 69);
-        font-weight: 100
+        fill:rgb(172, 165, 165);
       }
+      .label text{
+        fill:rgb(172, 165, 165)
+        /* stroke:rgb(172, 165, 165); */
+      }
+      .tooltip {
+        padding: 6px;
+        font-size: 12px;
+        line-height: 1;
+        line-height: 1.5em;
+        color: #fff;
+        text-align: center;
+        text-transform: capitalize;
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 4px;
+      }
+      .active {
+          font-weight: bold;
+          /* fill: #000; */
+          transition: fill 0.3s ease-out;
+          /* text-anchor: middle; */
+        }
+
+      .inactive {
+        font-weight: lighter;
+        fill: #c9c9c9;
+        transition: fill 0.3s ease-out;
+        /* text-anchor: middle; */
+      }
+
+      .inactive:hover {
+        fill: #000;
+        cursor: pointer;
+      }
+
 
    </style>
    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
