--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,33 @@
-.plot-svg{
-    background-color: black
+#map {
+    height: 600px;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
+   }
+
+.jumbotron-billboard .img{
+    margin-bottom: 0px;
+    opacity: 0.6;
+    color: #fff;
+    background: #000 url('/static/images/coral-reef.png') top center no-repeat;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:1;
+}
+.jumbotron {
+    position:relative;
+    padding-top:50px;
+    padding-bottom:50px;
+}
+.jumbotron .container {
+    position:relative;
+    z-index:2;
+}
+
+.container{
+    margin-top: 20px;
+    margin-bottom: 50px
 }
