--- a/templates/index.html
+++ b/templates/index.html
@@ -7,95 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Deep Sea Corals</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <style>
-      /* Set the size of the div element that contains the map */
-     #map {
-       height: 600px;  /* The height is 400 pixels */
-       width: 100%;  /* The width is the width of the web page */
-      }
-      .jumbotron-billboard .img{
-        margin-bottom: 0px;
-        opacity: 0.6;
-        color: #fff;
-        background: #000 url('/static/images/coral-reef.png') top center no-repeat;
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        overflow: hidden;
-        position:absolute;
-        top:0;
-        left:0;
-        z-index:1;
-      }
-      .jumbotron {
-        position:relative;
-        padding-top:50px;
-        padding-bottom:50px;
-      }
-      .jumbotron .container {
-        position:relative;
-        z-index:2;
-      }
-      
-      .container{
-        margin-top: 20px;
-        margin-bottom: 50px
-      }
-      .xaxis line{
-        stroke:rgb(77, 69, 69);
-      }
-      .xaxis path{
-        stroke:rgb(77, 69, 69);
-      }
-      .x-text{
-        fill:rgb(172, 165, 165);
-        /* stroke-width: 0.5px;     */
-       }
-      .yaxis line{
-        stroke:rgb(77, 69, 69);
-      }
-      .yaxis path{
-        stroke:rgb(77, 69, 69);
-      }
-      .yaxis text{
-        fill:rgb(172, 165, 165);
-      }
-      .label text{
-        fill:rgb(172, 165, 165)
-        /* stroke:rgb(172, 165, 165); */
-      }
-      .tooltip {
-        padding: 6px;
-        font-size: 12px;
-        line-height: 1;
-        line-height: 1.5em;
-        color: #fff;
-        text-align: center;
-        text-transform: capitalize;
-        background: rgba(0, 0, 0, 0.8);
-        border-radius: 4px;
-      }
-      .active {
-          font-weight: bold;
-          /* fill: #000; */
-          transition: fill 0.3s ease-out;
-          /* text-anchor: middle; */
-        }
-
-      .inactive {
-        font-weight: lighter;
-        fill: #c9c9c9;
-        transition: fill 0.3s ease-out;
-        /* text-anchor: middle; */
-      }
-
-      .inactive:hover {
-        fill: #000;
-        cursor: pointer;
-      }
-
-
-   </style>
+  <link rel="stylesheet" href="../static/css/d3style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
@@ -141,7 +54,7 @@
         <div class='row'>
             <div class="card bg-light mb-3">
                 <div class="card-body">
-                  <h5 id='paragraph'></h5>
+                  <p id='paragraph'></p>
                 </div>
             </div> 
         </div>
@@ -159,14 +72,25 @@
 
 </div class='container'>
     <div class='row justify-content-center'>
-      <h3 id='title'>Average depth of corals by common category</h3>
+      <h3 id='title'>Coral's diversity by ocean's depth</h3>
     </div>
 </div>
 <div class='container'>
-    <div id="plot"></div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-      <script src="{{ url_for('static', filename='js/plots.js') }}"></script> 
+  <div class=row>
+    <div class='col'>
+        <div id="plot"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+        <script src="{{ url_for('static', filename='js/plots.js') }}"></script> 
+    </div>
+    <div class='col'>
+      <div class="card bg-light mb-3">
+          <div class="card-body">
+            <p id='paragraph2'></p>
+          </div>
+      </div>
+    </div> 
+  </div>
 </div>
 
   <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script>
