--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         <div class='row'>
           <h3>Geographic location</h3>
           <div id="map"></div>
-          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBejMXp63dhTDOZGR2c53lDM1CMW5jT7R4&libraries=visualization"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key={YOUR-APY-KEY-HERE}&libraries=visualization"></script>
         </div>
       </div>
     </div>
